# fanfiction.net-downloader

./: .gitignore  .pylintrc  README.md  build.bat  build.sh  check.sh  ci.bat  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
json2epub/: Cargo.toml
json2epub-cli/: Cargo.toml
json2epub-cli/src/: main.rs
json2epub/src/: json_types.rs  lib.rs
json2epub/templates/: chapter.html.j2  cover.html.j2  epub.css.j2
user-script/: eslint.config.js  generate.py  template.user.js
