[package]
name = "json2epub"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.43"
epub-builder = { version = "0.8", default-features = false, features = ["libzip"] }
js-sys = "0.3.85"
minijinja = "2.15.1"
minijinja-embed = "2.15.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["js"] }
wasm-bindgen = "0.2.108"
web-sys = { version = "0.3.85", features = ["Blob", "BlobPropertyBag"] }

[build-dependencies]
minijinja-embed = "2.15.1"

[profile.release]
opt-level = "z"  # Optimize for size more aggressively than "s"
strip = true     # Automatically strip symbols and debug info from the binary
lto = true       # Enable Link-Time Optimization (LTO)
codegen-units = 1 # Reduce code generation units to 1 for maximum optimization
panic = "abort"  # Abort on panic, removing code for stack unwinding

[package.metadata.wasm-pack.profile.release]
# Need to enable --enable-bulk-memory but then there are some other features used too that it then complains about
wasm-opt = ["-Oz", "--all-features"]
